Fixed validation of relative JAR URIs.